fixed image alignment

--- a/alien_invasion.css
+++ b/alien_invasion.css
@@ -29,6 +29,7 @@ body {
   width: 100%;
   grid-template-columns: auto auto auto;
   justify-content: space-around;
+  align-items: center;
 }
 
 #playerMarker {
@@ -49,6 +50,11 @@ img {
   margin-left: auto;
   margin-right: auto;
 }
+
+#playerMarker {
+  margin-top: 200px;
+}
+
 #alien {
   margin: 100px, 10px, 10px, 10px;
 }
